--- a/src/modules/common/styles/_constants.scss
+++ b/src/modules/common/styles/_constants.scss
@@ -1,8 +1,14 @@
+//Margins
 $small-margin: 5px;
 $med-margin: 10px;
 $large-margin: 20px;
 $x-large-margin: 30px;
+//Paddings
 $small-padding: 5px;
 $med-padding: 10px;
 $large-padding: 20px;
 $x-large-padding: 30px;
+//Font Sizes
+$small-font-size: 12px;
+$med-font-size: 16px;
+$large-font-size: 20px;
