--- a/src/modules/app/App.scss
+++ b/src/modules/app/App.scss
@@ -7,7 +7,7 @@
   font-family: 'Roboto', sans-serif;
 }
 
-html, body, div, span {
+html, body, div, span, ul, li {
   margin: 0;
   padding: 0;
   border: 0;
