--- a/src/modules/app/App.scss
+++ b/src/modules/app/App.scss
@@ -17,6 +17,20 @@ html, body, div, span, ul, li {
   background: transparent;
 }
 
+button:hover, a:hover {
+  cursor: pointer;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  transition: .3s;
+}
+
+a:hover {
+  color: $light-blue;
+}
+
 ul {
   list-style-type: none;
 }
@@ -27,8 +41,9 @@ body {
   color: white;
 }
 
-main{
+main {
   padding: $large-padding;
+  grid-column: span 12;
 }
 
 .container {
