--- a/src/modules/app/header/Header.scss
+++ b/src/modules/app/header/Header.scss
@@ -3,8 +3,19 @@
 
 header {
   background: $dark-blue;
+  display: grid;
   grid-column: span 12;
+  grid-template-columns: repeat(12, 1fr);
+  div{
+    grid-column: span 4;
+    display: inline-flex;
+    color: $red;
+    font-size: $large-font-size;
+    align-items: center;
+    margin-left: $large-margin;
+  }
   nav {
+    grid-column: span 8;
     display: flex;
     height: 100%;
     justify-content: flex-end;
@@ -13,13 +24,15 @@ header {
     div {
       display: flex;
       align-items: center;
-      padding: $med-padding;
       a {
         display: inline-block;
         color: $yellow;
         font-size: $large-font-size;
         text-decoration: none;
         vertical-align: center;
+      }
+      a:hover{
+        color: white;
       }
     }
   }
