--- a/src/modules/app/App.scss
+++ b/src/modules/app/App.scss
@@ -21,6 +21,10 @@ button:hover, a:hover {
   cursor: pointer;
 }
 
+button:focus, input:focus {
+  outline: 0;
+}
+
 a {
   color: white;
   text-decoration: none;
