--- a/src/modules/common/components/Button/Buttons.scss
+++ b/src/modules/common/components/Button/Buttons.scss
@@ -4,7 +4,7 @@
 button {
   background: $light-blue;
   border: 0;
-  border-radius: 8px;
+  border-radius: $border-radius;
   min-width: 120px;
   min-height: 40px;
   color: white;
@@ -13,8 +13,8 @@ button {
   transition: .3s
 }
 
-button:focus {
-  outline: 0;
+button + button {
+  margin-left: $med-margin;
 }
 
 button:hover, a:hover {
